Always show the scrollbar to prevent changing width when filtering and scrolling

--- a/resources/ui/widget/css/RtcGitConnector.css
+++ b/resources/ui/widget/css/RtcGitConnector.css
@@ -172,7 +172,7 @@
     height: 200px;
     margin-right: 10px;
     border: 1px solid #cacaca;
-    overflow-y: auto;
+    overflow-y: scroll;
 }
 
 .rtcGitConnectorViewAndSelectListItem {
